Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjNumObjRetText.quorum
class Main
    action Main
        Yoda<Text, Text, Number> yoda
        Number y = yoda:useForce("green", "green")
        output "passed"
     end
end
