Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriNumObjRetTextFail.quorum
class Main
    action Main
        Yoda<Text, Text, Number> yoda
        boolean y = yoda("green", "green", true)
     end
end
